<resources>
    <string name="app_name">AceRestaurantApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view">TextView</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="the_ace_restaurant">The Ace Restaurant</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ace_restaurant_log">Ace Restaurant Log</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_world">Hello World</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="menu">Menu</string>
    <string name="reserve">Reserve</string>
    <string name="locate">Locate</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>
    <string name="about">About</string>
    <string name="starters">Starters</string>
    <string name="soupsandsalads">Soups &amp; Salads</string>
    <string name="entrees">Entrees</string>
    <string name="beverages">Beverages</string>
    <string name="desserts">Desserts</string>
    <string name="children">Kids</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Ace Restaurant</string>
    <string name="nav_header_subtitle">(407) 555-1234</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">activity_home_label</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Your Cart</string>
    <string name="menu_menu">Menu</string>
    <string name="error_occurred">An error occurred while loading data</string>
</resources>